# mac-file-browser

./: LICENSE.txt  README.md  package.json  vite.config.ts
src/: App.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/sqlite/: cache.sqlite
src-tauri/src/: database.rs  disk_index.rs  disks.rs  entries.rs  main.rs  slides.rs  state.rs
src-tauri/src/file_system/: mod.rs  volumes.rs
src/components/: gallery.tsx  layout.tsx  recursiveFolder.tsx
src/hooks/: useClearFolderData.ts  useHiddenFiles.ts  useWindowEvent.ts
src/pages/: folder.tsx  home.tsx  view.tsx
src/store/: atoms.ts
src/utils/: atoms.ts  helpers.ts  tauri.ts  types.ts
src/views/: listView.tsx  treeView.tsx
