[package]
name = "mac-file-browser"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = [ "api-all"] }
serde = "1.0.171"
serde_json = "1.0.103"
sysinfo = "0.29.4"
chrono = "0.4.26"
percent-encoding = "2.3.0"
rayon = "1.7.0"
async-recursion = "1.0.4"
async-std = "1.12.0"
walkdir = "2.3.3"
indicatif = "0.17.6"
tauri-plugin-context-menu = "0.4.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
